--- a/Translation/item.json
+++ b/Translation/item.json
@@ -4735,6 +4735,788 @@
 		"th": "",
 		"id": ""
 	},
+	"item.2073.name": {
+		"en": "Virtue - Helmet",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2074.name": {
+		"en": "Virtue - Armor",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2075.name": {
+		"en": "Virtue - Boots",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2076.name": {
+		"en": "Virtue - Belt",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2077.name": {
+		"en": "Virtue - Cape",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2078.name": {
+		"en": "Vice - Weapon",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2079.name": {
+		"en": "Vice - Gauntlets",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2080.name": {
+		"en": "Vice - Ring",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2081.name": {
+		"en": "Vice - Necklace",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2082.name": {
+		"en": "Sphinx - Necklace",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2083.name": {
+		"en": "Sphinx - Belt",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2084.name": {
+		"en": "Sphinx - Head",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2085.name": {
+		"en": "Marauder - Cape",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2086.name": {
+		"en": "Marauder - Armor",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	
+	"item.2087.name": {
+		"en": "Spirit - Weapon",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2088.name": {
+		"en": "Spirit - Gauntlets",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2089.name": {
+		"en": "Spirit - Boots",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2090.name": {
+		"en": "Spirit - Necklace",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2091.name": {
+		"en": "Spirit - Cape",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2092.name": {
+		"en": "Spirit - Helmet",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2093.name": {
+		"en": "Spirit - Armor",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2094.name": {
+		"en": "Spirit - Belt",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2095.name": {
+		"en": "Spirit - Ring",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	
+	"item.2096.name": {
+		"en": "Doomsday - Weapon",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2097.name": {
+		"en": "Doomsday - Gauntlets",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2098.name": {
+		"en": "Doomsday - Boots",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2099.name": {
+		"en": "Doomsday - Necklace",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2100.name": {
+		"en": "Doomsday - Cape",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2101.name": {
+		"en": "Doomsday - Helmet",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2102.name": {
+		"en": "Doomsday - Armor",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2103.name": {
+		"en": "Doomsday - Belt",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2104.name": {
+		"en": "Doomsday - Ring",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	
+	"item.2105.name": {
+		"en": "Shalim - Weapon",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2106.name": {
+		"en": "Shalim - Gauntlets",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2107.name": {
+		"en": "Shalim - Boots",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2108.name": {
+		"en": "Shalim - Necklace",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2109.name": {
+		"en": "Shalim - Cape",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2110.name": {
+		"en": "Shalim - Helmet",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2111.name": {
+		"en": "Shalim - Armor",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2112.name": {
+		"en": "Shalim - Belt",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.2113.name": {
+		"en": "Shalim - Ring",
+		"fr": "",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
     "item.3000.name":{
         "en":"[Spirit Egg] Pudding Slime",
         "fr":"[Oeuf d'esprit] Slime Pudding",
