--- a/Translation/instance.json
+++ b/Translation/instance.json
@@ -474,25 +474,6 @@
         "th": "",
         "id": ""
     },
-    "instance.INSTANCE_70_OLD.name":{
-        "en": "Nordic Lands",
-        "fr": "Terres Nordiques",
-        "es": "Tierras Nórdicas",
-        "zh-cn": "北欧地区",
-        "zh-tw":"",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "Nördliche Länder",
-        "jp": "",
-        "pt": "",
-        "vi": "Vùng Đất Bắc Âu",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
     "instance.INSTANCE_80_OLD.name":{
         "en": "...",
         "fr": "...",
@@ -684,6 +665,63 @@
         "id": ""
     },
     "instance.INSTANCE_60.description.reward.special":{
+        "en": "Glory Gem",
+        "fr": "Gemme de Gloire",
+        "es": "Gema de Gloria",
+        "zh-cn": "荣誉宝石",
+        "zh-tw":"",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "Rumstein",
+        "jp": "",
+        "pt": "",
+        "vi": "Đá Vinh Quang",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "instance.INSTANCE_70_OLD.name":{
+        "en": "Nordic Lands",
+        "fr": "Terres Nordiques",
+        "es": "Tierras Nórdicas",
+        "zh-cn": "北欧地区",
+        "zh-tw":"",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "Nördliche Länder",
+        "jp": "",
+        "pt": "",
+        "vi": "Vùng Đất Bắc Âu",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "instance.INSTANCE_70.description.reward.normal":{
+        "en": "Lv70 common materials, Costume sets and Runestones.",
+        "fr": "Materiel commun Nv70, Costumes et Pierres runiques.",
+        "es": "Materiales usuales Nv70, Conjuntos de vestuario y Piedras rúnicas.",
+        "zh-cn": "70级普通材料、套装符文石.",
+        "zh-tw":"",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "Gewöhnliches Material Lv70, Kostüme und Runensteine.",
+        "jp": "",
+        "pt": "",
+        "vi": "Nguyên liệu thường Cấp 70, Bộ Trang Phục và Đá Cổ Ngữ.",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "instance.INSTANCE_70.description.reward.special":{
         "en": "Glory Gem",
         "fr": "Gemme de Gloire",
         "es": "Gema de Gloria",
